--- a/15/package.json
+++ b/15/package.json
@@ -12,6 +12,8 @@
     "canvas-sketch-cli": "1.11.14",
     "canvas-sketch-util": "1.10.0",
     "dat.gui": "^0.7.7",
+    "run": "^1.4.0",
+    "start": "^5.1.0",
     "stats-js": "1.0.1",
     "three": "0.133.1"
   },
